--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,8 +25,8 @@ requirements:
     - httpx >=0.18.2
     - pyjwt
     - python >=3.6
-    - sanic
-    - tortoise-orm
+    - sanic ==21.3.4
+    - tortoise-orm ==0.17.4
 
 test:
   imports:
