--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - httpx >=0.18.2
     - pyjwt
     - python >=3.6
+    - requests
     - sanic ==21.3.4
     - tortoise-orm ==0.17.4
 
