--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - pyjwt >=1.7.0
     - python >=3.6
     - sanic ==21.3.4
-    - tortoise-orm ==0.17.4
+    - tortoise-orm >=0.17.0
 
 test:
   imports:
