--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - python >=3.6
   run:
     - aiofiles >=0.3.0
+    - argon2-cffi >=20.1.0
     - bcrypt
     - captcha
     - pyjwt >=1.7.0
