--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,7 +19,7 @@ requirements:
     - pip
     - python >=3.6
   run:
-    - aiofiles >=0.3.0
+    - aiofile >=3.2.0
     - argon2-cffi >=20.1.0
     - captcha
     - pyjwt >=1.7.0
