--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 01d925f5ae423ea21393b3fe96e33c62dc20732189d913622e56c0eee77a3bce
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -28,12 +28,16 @@ requirements:
     - tortoise-orm >=0.17.0
 
 test:
+  source_files:
+    - sanic_security/test
   imports:
     - sanic_security
   commands:
     - pip check
+    - pytest -vvv --capture=tee-sys sanic_security/test/tests.py
   requires:
     - pip
+    - pytest
 
 about:
   home: https://github.com/sunset-developer/sanic-security
