--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - captcha
     - pyjwt >=1.7.0
     - python >=3.6
-    - sanic
+    - sanic >=21.3.0
     - tortoise-orm >=0.17.0
 
 test:
