--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,10 +17,14 @@ build:
 requirements:
   host:
     - pip
+    - poetry-core
     - python >=3.6
+    - setuptools >=58.0.0
+    - wheel
   run:
     - argon2-cffi >=20.1.0
-    - captcha
+    - captcha ==0.4
+    - pillow ==9.5.0
     - pyjwt >=1.7.0
     - python >=3.6
     - sanic >=21.3.0
