--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
   sha256: 62100b587cde8a9684724376a935996c2352fef4f8100589a6de5342b9a7dc76
 
 build:
@@ -19,6 +19,7 @@ requirements:
     - pip
     - python >=3.8
     - setuptools >=58.0.0
+    - wheel
   run:
     - python >=3.8
     - tortoise-orm >=0.17.0
