--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,3 +1,4 @@
+{% set python_min = python_min|default("0.1a0") %}
 {% set name = "sanic-security" %}
 {% set version = "1.13.1" %}
 
@@ -17,11 +18,11 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.8
+    - python {{ python_min }}.*
     - setuptools >=58.0.0
     - wheel
   run:
-    - python >=3.8
+    - python >={{ python_min }}
     - tortoise-orm >=0.17.0
     - pyjwt >=1.7.0
     - captcha >=0.4
@@ -38,6 +39,7 @@ test:
     - pip check
   requires:
     - pip
+    - python ={{ python_min }}
 
 about:
   home: https://github.com/sunset-developer/sanic-security
