--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,3 @@
-{% set python_min = python_min|default("0.1a0") %}
 {% set name = "sanic-security" %}
 {% set version = "1.13.2" %}
 
@@ -18,7 +17,7 @@ build:
 requirements:
   host:
     - pip
-    - python {{ python_min }}.*
+    - python {{ python_min }}
     - setuptools >=58.0.0
     - wheel
   run:
@@ -39,7 +38,7 @@ test:
     - pip check
   requires:
     - pip
-    - python ={{ python_min }}
+    - python {{ python_min }}
 
 about:
   home: https://github.com/sunset-developer/sanic-security
