--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,7 @@ requirements:
     - sanic >=21.3.0
     # Contraints from tortoise-orm 0.19.3
     - iso8601 <2.0.0,>=1.0.2
+    - secure
 
 test:
   imports:
