--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "sanic-security" %}
 {% set version = "1.13.4" %}
+{% set python_min = "3.10" %}
 
 package:
   name: {{ name|lower }}
